[tool.poetry]
name = "mlflow-project-iris"
version = "0.1.0"
description = ""
authors = ["Carlos Reyes <cbeff.j44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.6.0"
numpy = "^1.25.2"
scipy = { version = "^1.10.1", python = ">=3.11,<3.13" }
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
